<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context="adam.flappywing.activities.MainActivity">



    <TextView
        android:id="@+id/mainTextViewGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="75dp"
        android:text="@string/mainHeader"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/logoColor"
        android:textColor="@color/logoColor"
        tools:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502" />


    <Button
        android:id="@+id/mainButtonPlay"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginRight="8dp"
        android:background="@color/buttonBackground"
        android:text="@string/mainButtonPlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTextViewGameName" />

    <Button
        android:id="@+id/mainButtonHighScore"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/mainButtonHighscore"
        android:background="@color/buttonBackground"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonPlay" />

    <Button
        android:id="@+id/mainButtonSettings"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/mainButtonSettings"
        android:background="@color/buttonBackground"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonHighScore" />

    <Button
        android:id="@+id/mainButtonAbout"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:background="@color/buttonBackground"
        android:text="@string/mainButtonAbout"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonSettings" />

    <Button
        android:id="@+id/mainButtonExit"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/mainButtonExit"
        android:background="@color/buttonBackground"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonAbout" />


</android.support.constraint.ConstraintLayout>
