<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context="adam.flappywing.activities.HighscoreActivity">


    <TextView
        android:id="@+id/highscoreTextViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/highscoreHeader"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/aboutTextColor"
        android:textColor="@color/aboutTextColor"
        tools:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:id="@+id/highscoreLinearLayout"
        android:layout_width="0dp"
        android:layout_height="430dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:background="@color/buttonBackground"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highscoreTextViewHeader">

        <TextView
            android:id="@+id/highscoreTextViewPersonalRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/myText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/highscoreTextViewOnline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/myText"
            android:textSize="20sp"
            android:text="@string/highscoreOnline"/>

        <ListView
            android:id="@+id/highscoreListview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/listViewBackground">
        </ListView>

    </LinearLayout>

    <Button
        android:id="@+id/highscoreButtonBack"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/aboutButtonBack"
        android:background="@color/buttonBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highscoreLinearLayout" />


</android.support.constraint.ConstraintLayout>
